Finished kata with merged/refactored codebase.

--- a/sandbox/katas/04-data-munging/2015-06/Makefile
+++ b/sandbox/katas/04-data-munging/2015-06/Makefile
@@ -1,10 +1,13 @@
-all: weather football
+all: weather football merged
 
 weather: weather.dll weather-main.cs
 	mcs -t:exe -r:weather.dll weather-main.cs
 
 football: football.dll football-main.cs
 	mcs -t:exe -r:football.dll football-main.cs
+
+merged: merged.dll merged-main.cs
+	mcs -t:exe -r:merged.dll merged-main.cs
 
 weather.dll: weather.cs
 	mcs -t:library weather.cs
@@ -18,10 +21,19 @@ football.dll: football.cs
 football-test.dll: football.dll football-test.cs
 	mcs -t:library -pkg:mono-nunit -r:football.dll football-test.cs
 
-test: weather-test football-test
+merged.dll: merged.cs
+	mcs -t:library merged.cs
+
+merged-test.dll: merged.dll merged-test.cs
+	mcs -t:library -pkg:mono-nunit -r:merged.dll merged-test.cs
+
+test: weather-test football-test merged-test
 
 weather-test: weather-test.dll
 	nunit-console -nologo -noresult weather-test.dll
 
 football-test: football-test.dll
 	nunit-console -nologo -noresult football-test.dll
+
+merged-test: merged-test.dll
+	nunit-console -nologo -noresult merged-test.dll
