--- a/sandbox/tdl/package.json
+++ b/sandbox/tdl/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "jasmine": "~2.3.2"
+    "jasmine": "~2.3.2",
+    "copy-files": "~0.1.0"
   }
 }
