--- a/FPinFS/FPinFS/FPinFS.fsproj
+++ b/FPinFS/FPinFS/FPinFS.fsproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Chapter2.fs" />
-    <None Include="Script.fsx" />
+    <Compile Include="Chapter3.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
