--- a/FPinFS/FPinFS/FPinFS.fsproj
+++ b/FPinFS/FPinFS/FPinFS.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Chapter2.fs" />
     <Compile Include="Chapter3.fs" />
+    <Compile Include="Chapter4.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
